regression/fail/modules.13.sml
type 'a u = unit
signature S =
   sig
      type 'a t
   end where type t = u
